--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,13 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  <<: *default
+  adapter: postgresql
+  encoding: unicode
   pool: 5
-  timeout: 5000
+
+ #bigin adapter: sqlite3
+  #database: db/production.sqlite3
+  #pool: 5
+  #timeout: 5000
+
