--- a/config/database.yml
+++ b/config/database.yml
@@ -3,6 +3,8 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
+
+#開発用
 development:
   adapter: sqlite3
   database: db/development.sqlite3
@@ -12,20 +14,34 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+
+#テスト用
 test:
   adapter: sqlite3
   database: db/test.sqlite3
   pool: 5
   timeout: 5000
 
+#production:  
+ # <<: *default
+  #adapter: postgresql
+  #encoding: unicode
+  #pool: 5
+  
+
+default: &default
+  adapter: sqlite3
+  pool: 5
+  timeout: 5000  
+  
+#本番用
 production:
   <<: *default
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
+  database: db/production.sqlite3
+  
 
- #bigin adapter: sqlite3
-  #database: db/production.sqlite3
+#bigin adapter: sqlite3
+ # database: db/production.sqlite3
   #pool: 5
   #timeout: 5000
 
