--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  link_url: MyString
   image_url: MyString
-  image: MyString
-  brand: MyString
+  brands: MyString
 
 two:
+  link_url: MyString
   image_url: MyString
-  image: MyString
-  brand: MyString
+  brands: MyString
